[gd_scene load_steps=2 format=3 uid="uid://dy1ojuscnguqy"]

[ext_resource type="Script" path="res://Inventory/inventory_slot.gd" id="1_t7piy"]

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(36, 36)
offset_right = 36.0
offset_bottom = 36.0
script = ExtResource("1_t7piy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1

[node name="Amount" type="Label" parent="."]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
